1 - Created a checkout proccess using stripe for payment (testmode). 2 - Success payment page created for better user experience. 3 - handled some CSS layout issues (NavBar media size display and Footer)

--- a/ecommerce-frontend/src/styles/globals.css
+++ b/ecommerce-frontend/src/styles/globals.css
@@ -24,3 +24,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@media (max-width: 768px) {
+
+  .brand{
+    display: none;
+  }
+}
